Fixed blurry play button

--- a/src/assets/less/edit-deck.less
+++ b/src/assets/less/edit-deck.less
@@ -75,6 +75,7 @@
       align-items: center;
   
       margin-bottom: @spacing__xl;
+      transform-style: preserve-3d;
   
       a {
         display: inline-flex;
